# arsat

./: .gitignore  README.md  flake.nix  package.json  vercel.json
api/prices/: Cargo.toml  [prices].rs  [prices].ts  _utils.rs
public/: index.html  manifest.json
src/: App.tsx  Chart.tsx  Control.tsx  Info.tsx  index.css  prices.ts  service-worker.ts  utils.ts
src/components/: About.tsx  Chart.tsx  Control.tsx  Info.tsx  Main.tsx  Scale.tsx  Settings.tsx
src/utils/: formats.ts  helpers.ts  hooks.ts  themes.ts  types.ts
