[package]
name = "arsat-slf"
version = "0.1.0"
authors = [ "Ezequiel Ramis <ezequielramis.hello@gmail.com>" ]
edition = "2018"

[dependencies]
serde_json = "1.0.61"
chrono = "0.4.19"
async-recursion = "0.3.1"
http = "0.1"
now_lambda = "*"

  [dependencies.reqwest]
  version = "0.11"
  features = [ "json" ]

  [dependencies.serde]
  version = "1.0.119"
  features = [ "derive" ]

  [dependencies.tokio]
  version = "1"
  features = [ "full" ]

  [dependencies.strum]
  version = "0.20"
  features = [ "derive" ]

[lib]
name = "utils"
path = "utils.rs"

[[bin]]
name = "_prices_"
path = "/api/prices/[prices].rs"
